Fix hero style spacing and h1, h3 alignment

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "roboto",sans-serif;
+    font-family: "omnes-pro","proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
     margin: 0;
     padding: 0;
     min-height: 100vh;
@@ -7,8 +7,9 @@ body {
     flex-direction: column;
 }
 
-.links a {
+a {
     text-decoration: none;
+    text-align: center;
     color: black;
     flex: 1;
     padding: 10px;
@@ -22,11 +23,6 @@ header {
     padding-left: 30px;
     padding-top: 10px;
     padding-right: 30px;
-}
-
-h1 {
-    font-size: 48px;
-    font-weight: 900;
 }
 
 section {
@@ -48,16 +44,39 @@ section.hero {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
     margin: 0;
-    padding: 0;
+    padding: 20px;
     flex: auto;
     max-width: 500px;
+    gap: 10px;
+}
+
+.text-content > h1 {
+    font-size: 48px;
+    font-weight: 900;
+    margin: 0;
+    min-width: 425px;
+}
+
+.text-content > h3 {
+    font-size: 20px;
+    font-weight: 700;
+    margin: 0;
+}
+
+.hero-button {
+    display: flex;
+    align-items: center;
+}
+.hero-button a {
+    flex: auto;
+    max-width: 100px;
+    font-weight: 600;
 }
 .hero-content {
     display: flex;
-    flex: 1;
-    justify-content: center;
+    flex: auto;
+    justify-content: flex-end;
     align-items: center;
 }
 
